--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>Ryan Cavanagh</title>
+  </head>
+  <body>
+    <h1>Hi, my name's Ryan.</h1>
+    <p>Welcome to my website.</p>
+    <a href=#"about me">About Me</a>
+    <a href=#"projects">Projects Me</a>
+    <a href=#"resume">Resume</a>
+    <h3 id="about me">About Me</h3>
+    <p>This is me.</p>
+    <h3 id="projects">Projects</h3>
+    <p>Here are my pojects:</p>
+    <h3 id="resume">Resume</h3>
+    <p>This is my resume.</p>
+  </body>
 </html>
