Complete Redesign Test

--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset='utf-8'>
     <title>Ryan Cavanagh</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>Hi, my name's Ryan.</h1>
-    <p>Welcome to my website.</p>
-    <a href="#about me">About Me</a>
-    <a href="#projects">Projects Me</a>
-    <a href="#resume">Resume</a>
-    <h3 id="about me">About Me</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <h3 id="projects">Projects</h3>
-    <p>Games:</p>
-    <iframe frameborder="0" src="https://itch.io/embed/393915?bg_color=f7f7f7" width="552" height="167"></iframe>
-    <h3 id="resume">Resume</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </body>
+    <div>
+      <div class='container'>
+        <p>fsjdhfjasfhjdshajkl</p>
+        <div class="parrallax"</div>
+        <p>fsjdhfjasfhjdshajkl</p>
+      </div>
+    </div>
+    <div id="alignCenterPadding">
+      <h1 class="header">Ryan Cavanagh</h1>
+      <h2 class='forfont'>I am a second year computer science student at California State University Long Beach.</h2>
+    </div>
+    <div id="alignLeft">
+      <h2 class='proj'>Personal Projects</h2>
+    </div>
+    <div id='alignCenter'>
+      <h2 class ='forfont'>RGB-Image-Generator<br>(8/15/19)</h2>
+    </div>
+    <div id="alignLeft">
+      <p>This program was written in Python, using Kivy and Pil. It reads a user selected image and stores ever RGB value from the image. A new one pixel length image is created, using the stored RGB values. The new image is then stretched to the desired output ratio.</p>
+    </div>
+    <div id='alignCenter'>
+      <h2 class ='forfont'>Tic Tac Toe<br>(4/10/19)</h2>
+    </div>
+    <div id="alignLeft">
+      <p>This game was created in Unity and written in C#. It is a basic 3-in-a-row or 5-in-a-row, turn based, tic tac toe game.</p>
+    </div>
+    <div id='alignCenter'>
+      <iframe frameborder="0" src="https://itch.io/embed/393915?border_width=0&amp;bg_color=D3D3D3" width="206" height="165"></iframe>
+    </div>
+    </body>
+  </div>
 </html>
