Completed website redesign

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <h2 class ='forfont' id='pads'>This Website<br>(8/18/19)</h2>
       </div>
       <div class="alignLeft">
-        <p class='pad'>I created this website using HTML and CSS. All work, except the GitHub logos, is my own.</p>
+        <p>I created this website using HTML and CSS. All work, except the GitHub logos, is my own.</p>
+        <p class="links">
+          <a href="https://github.com/ryan-w-c/ryan-w-c.github.io" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
+        </p>
       </div>
       <div class='alignCenter'>
         <h2 class ='forfont'>RGB-Image-Generator<br>(8/15/19)</h2>
