--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150458197-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-150458197-1');
-    </script>
     <meta charset='utf-8'>
     <title>Ryan Cavanagh</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -30,6 +21,28 @@
       <h2 class='proj' id='projects'>Personal Projects</h2>
     </div>
     <div class='widthFormat'>
+      <div class='alignCenter'>
+        <h2 class ='forfont' id='pads'>Bingo Card Generator<br>(5/2/20)</h2>
+      </div>
+      <div class="alignLeft">
+        <p>This site creates a random bingo card that can be played in the browser or printed. It was created with JavaScript, CSS, and HTML.</p>
+        <img src="img/bingoCard.png" alt="Bingo Card screenshot" style="width:100%; max-width: 300px; height:auto; margin: auto; display: block;">
+        <p class="links">
+          <a href="https://github.com/ryan-w-c/bingo" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
+          <a href="https://cavanagh.dev/bingo/" class='outlink' title="Play Now">Play Now</a>
+        </p>
+      </div>
+      <div class='alignCenter'>
+        <h2 class ='forfont' id='pads'>Bingo Number Draw<br>(5/2/20)</h2>
+      </div>
+      <div class="alignLeft">
+        <p>This site draws random numbers for a bingo game and displays them on a bingo board.</p>
+        <img src="img/bingoBoard.png" alt="Bingo Board screenshot" style="width:100%; max-width: 500px; height:auto; margin: auto; display: block;">
+        <p class="links">
+          <a href="https://github.com/ryan-w-c/bingoBoard" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
+          <a href="https://cavanagh.dev/bingoBoard/" class='outlink' title="Play Now">Play Now</a>
+        </p>
+      </div>
       <div class='alignCenter'>
         <h2 class ='forfont' id='pads'>This Website<br>(8/18/19)</h2>
       </div>
