--- a/index.html
+++ b/index.html
@@ -1,90 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8'>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Ryan Cavanagh</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div class="parallax">
-      <div id="parallaxPadding">
-        <h1 class="header">Ryan Cavanagh</h1>
-        <h2 class='forfontPadding'>I am a second year computer science student at California State University Long Beach.</h2>
-        <div class ='row'>
-          <a href="https://github.com/ryan-w-c" id='gitLink' title="GitHub" target="_blank"></a>
-          <a href="#projects" id='codeLink' title="Projects"></a>
-          <a href="#contact" id='mailLink' title="Contact Me"></a>
+    <div id="formNav" class="overlay">
+      <div class="pop__card">
+        <main class="home">
+          <section class="formNav">
+            <header class="pop__header">
+              <h1 class="info__title">Contact Me</h1>
+              <span class="info__spacer"></span>
+              <form method="POST" action="send.php">
+                <input type="text" id="name" name="name" placeholder="Full Name">
+                <input type="text" id="email" name="email" placeholder="Email Address">
+                <input type="text" id="company" name="company" placeholder="Company">
+                <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
+                <button id="sendButton" type="submit" class="info__link" onclick="closeSubmit()">Send</button>
+                <button class="info__link" onclick="closeContact()">Close</button>
+              </form>
+            </header>
+          </section>  
+        </main>
+      </div>
+    </div>
+    <div id="myNav" class="overlay">
+      <div class="position">
+        <p class="hamburger" onclick="closeNav()">&times;</p>
+      </div>
+        <div class="pop__card">
+          <main class="home">
+            <section class="pop">
+              <header class="pop__header">
+                <h1 id="pop-title" class="info__title">Bingo Card Generator</h1>
+                <span class="info__spacer"></span>
+                <p id="pop-subtext" class="info__subtext">
+                  This site creates a random bingo card that can be played in the browser or printed. It was created with JavaScript, CSS, and HTML.
+                </p>
+                <a id="link-1" class="info__link" target="_blank">Play Now</a>
+                <a id="link-2" class="info__link" target="_blank">View on Github</a>
+              </header>
+            </section>  
+            <section class="cards">
+              <div class="group-one">
+                <div id="pop-card-1" class="card pop--square"></div>
+              </div>
+              <div class="group-two">
+                <div id="pop-card-2" class="card pop--large"></div>
+              </div>
+            </section>
+          </main>
         </div>
-      </div>
     </div>
-    <div class="alignLeft">
-      <h2 class='proj' id='projects'>Personal Projects</h2>
-    </div>
-    <div class='widthFormat'>
-      <div class='alignCenter'>
-        <h2 class ='forfont' id='pads'>Bingo Card Generator<br>(5/2/20)</h2>
-      </div>
-      <div class="alignLeft">
-        <p>This site creates a random bingo card that can be played in the browser or printed. It was created with JavaScript, CSS, and HTML.</p>
-        <img src="img/bingoCard.png" alt="Bingo Card screenshot" style="width:100%; max-width: 300px; height:auto; margin: auto; display: block;">
-        <p class="links">
-          <a href="https://github.com/ryan-w-c/bingo" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
-          <a href="https://cavanagh.dev/bingo/" class='outlink' title="Play Now">Play Now</a>
-        </p>
-      </div>
-      <div class='alignCenter'>
-        <h2 class ='forfont' id='pads'>Bingo Number Draw<br>(5/2/20)</h2>
-      </div>
-      <div class="alignLeft">
-        <p>This site draws random numbers for a bingo game and displays them on a bingo board.</p>
-        <img src="img/bingoBoard.png" alt="Bingo Board screenshot" style="width:100%; max-width: 500px; height:auto; margin: auto; display: block;">
-        <p class="links">
-          <a href="https://github.com/ryan-w-c/bingoBoard" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
-          <a href="https://cavanagh.dev/bingoBoard/" class='outlink' title="Play Now">Play Now</a>
-        </p>
-      </div>
-      <div class='alignCenter'>
-        <h2 class ='forfont' id='pads'>This Website<br>(8/18/19)</h2>
-      </div>
-      <div class="alignLeft">
-        <p>I created this website using HTML and CSS. All work, except the GitHub logos, is my own.</p>
-        <p class="links">
-          <a href="https://github.com/ryan-w-c/ryan-w-c.github.io" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
-        </p>
-      </div>
-      <div class='alignCenter'>
-        <h2 class ='forfont'>RGB-Image-Generator<br>(8/15/19)</h2>
-      </div>
-      <div class="alignLeft">
-        <p>This program was written in Python, using Kivy and Pil. It reads a user selected image and stores every RGB value from the image. A new one pixel length image is created, using the stored RGB values. The new image is then stretched to the desired output ratio. The screenshot below shows the user's image in the top left and the generated image in the top right.</p>
-        <img src="img/rgbPic.png" alt="Program screenshot" style="width:100%; max-width: 500px; height:auto; margin: auto; display: block;">
-        <p class="links">
-          <a href="https://github.com/ryan-w-c/RGB-Image-Generator" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
-          <a href="https://github.com/ryan-w-c/RGB-Image-Generator/releases/download/v1.0.0/RGB-Image_Generator.zip" class='outlink' title="Download Zip">Download Zip (Windows)</a>
-        </p>
-      </div>
-      <div class='alignCenter'>
-        <h2 class ='forfont'>Tic Tac Toe<br>(4/10/19)</h2>
-      </div>
-      <div class="alignLeft">
-        <p>This game was created in Unity and written in C#. It is a basic 3-in-a-row or 5-in-a-row, turn based, tic tac toe game.</p>
-      </div>
-      <div class='alignCenter'>
-        <img src="img/tictactoe.png" alt="Program screenshot" style="width:100%; max-width: 500px; height:auto; margin: auto; display: block;">
-        <p class="links">
-          <a href="https://github.com/ryan-w-c/TicTacToe" class='outlink' title="View on GitHub" target="_blank">View on GitHub</a>
-          <a href="https://ryan-w-c.itch.io/tic-tac-toe" class='outlink' title="Play on itch.io" target="_blank">Play on itch.io</a>
-        </p>
-      </div>
-    </div>
-    <div class="alignLeft">
-      <h2 class='proj'>Contact Me</h2>
-    </div>
-    <div class='alignCenter' id='contact'>
-      <h2 class ='forfont'>
-        <img src="img/mailWhite.png" style="vertical-align:middle; padding-right: 20px;" alt="Program screenshot">
-        cavanaghryan1@gmail.com
-      </h2>
-    </div>
+    <main class="home">
+      <section class="info">
+        <header class="info__header">
+          <h1 class="info__title">Ryan Cavanagh</h1>
+          <span class="info__spacer"></span>
+          <h3 class="info__greet">Hi,</h3>
+          <p class="info__subtext">
+            I'm a third year computer science student at California State University Long Beach. This page contains some of my personal projects.
+          </p>
+          <p class="info__link" onclick="contact()">Contact Me</p>
+          <a href="https://github.com/ryan-w-c" class="info__link" target="_blank">Github</a>
+        </header>
+      </section>
+      <section class="cards">
+        <div class="group-one">
+          <div class="card card--large zoom" style="background-image: linear-gradient(
+            180deg,
+            rgba(26, 27, 28, 0) 50%,
+            rgba(26, 27, 28, 0.2) 74.85%,
+            rgb(26, 27, 28) 100%),
+             url('img/bingoCard.png');"
+             onclick="bingoCard()">
+            <header class="card__header">
+              <h3 class="card__title">
+                <p class="card__link">Bingo Card Generator</p>
+              </h3>
+            </header>
+          </div>
+          <div class="card card--square zoom"  style="background-image: linear-gradient(
+            180deg,
+            rgba(26, 27, 28, 0) 50%,
+            rgba(26, 27, 28, 0.2) 60%,
+            rgb(26, 27, 28) 100%),
+             url('img/elevator.png');"
+             onclick="elevator()">
+            <header class="card__header">      
+              <h3 class="card__title">
+                <p class="card__link">Elevator Simulator</p>
+              </h3>
+            </header>
+          </div>
+          <div class="card card--large zoom" style="background-image: linear-gradient(
+            180deg,
+            rgba(26, 27, 28, 0) 50%,
+            rgba(26, 27, 28, 0.2) 74.85%,
+            rgb(26, 27, 28) 100%),
+             url('img/bingoBoard1.png');"
+             onclick="bingoDraw()">
+            <header class="card__header">
+                <h3 class="card__title">
+                  <p class="card__link">Bingo Number Draw</p>
+                </h3>
+              </header>
+          </div>
+        </div>
+        <div class="group-two">
+          <div class="card card--large zoom" style="background-image: linear-gradient(
+            180deg,
+            rgba(26, 27, 28, 0) 50%,
+            rgba(26, 27, 28, 0.2) 60%,
+            rgb(26, 27, 28) 100%),
+             url('img/rgbEx.png');"
+             onclick="rgb()">
+            <header class="card__header">
+              <h3 class="card__title">
+                <p class="card__link">RGB-Image-Generator</p>
+              </h3>
+            </header>
+          </div>
+          <div class="card card--square zoom" style="background-image: linear-gradient(
+            180deg,
+            rgba(26, 27, 28, 0) 50%,
+            rgba(26, 27, 28, 0.2) 60%,
+            rgb(26, 27, 28) 100%),
+             url('img/tictactoe.png');"
+             onclick="ticTacToe()">
+            <header class="card__header">
+              <h3 class="card__title">
+                <p class="card__link">Tic-Tac-Toe</p>
+              </h3>
+            </header>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script type="text/javascript" src="./functions.js"></script>
   </body>
 </html>
