--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
           <main class="home">
             <section class="pop">
               <header class="pop__header">
-                <h1 id="pop-title" class="info__title">Bingo Card Generator</h1>
+                <h1 id="pop-title" class="info__title"></h1>
                 <span class="info__spacer"></span>
-                <p id="pop-subtext" class="info__subtext">
-                  This site creates a random bingo card that can be played in the browser or printed. It was created with JavaScript, CSS, and HTML.
-                </p>
-                <a id="link-1" class="info__link" target="_blank">Play Now</a>
+                <p id="pop-subtext" class="info__subtext"></p>
+                <a id="link-1" class="info__link" target="_blank"></a>
                 <a id="link-2" class="info__link" target="_blank">View on Github</a>
               </header>
             </section>  
