--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <header class="pop__header">
               <h1 class="info__title">Contact Me</h1>
               <span class="info__spacer"></span>
-              <form method="POST" action="send.php">
+              <form method="post" action="send.php">
                 <input type="text" id="name" name="name" placeholder="Full Name">
                 <input type="text" id="email" name="email" placeholder="Email Address">
                 <input type="text" id="company" name="company" placeholder="Company">
