--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <input type="text" id="email" name="email" placeholder="Email Address">
                 <input type="text" id="company" name="company" placeholder="Company">
                 <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
-                <button id="sendButton" type="submit" name="submit" class="info__link" onclick="closeSubmit()">Send</button>
+                <input id="sendButton" type="submit" name="submit" class="info__link" onclick="closeSubmit()" value="Send">
               </form>
               <button class="info__link" onclick="closeContact()">Close</button>
             </header>
