fixed contact form

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <div class="pop__card">
         <main class="home">
           <section class="formNav">
-            <header class="pop__header">
-              <h1 class="info__title">Contact Me</h1>
+            <!-- <header class="pop__header"> -->
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf0v32k3knKaWmla83uNqRJm0M2bXOs6yHmJxubKuvhLsGISw/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+              <!-- <h1 class="info__title">Contact Me</h1>
               <span class="info__spacer"></span>
               <form method="post" action="send.php">
                 <input type="text" id="name" name="name" placeholder="Full Name">
@@ -25,9 +26,9 @@
                 <input type="text" id="company" name="company" placeholder="Company">
                 <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
                 <input id="sendButton" type="submit" name="submit" class="info__link" value="Send">
-              </form>
+              </form> -->
               <button class="info__link" onclick="closeContact()">Close</button>
-            </header>
+            <!-- </header> -->
           </section>  
         </main>
       </div>
