--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <div id="formNav" class="overlay">
+      <div class="position">
+        <p class="hamburger" onclick="closeContact()">&times;</p>
+      </div>
       <div class="pop__card">
         <main class="home">
           <section class="formNav">
@@ -27,7 +30,7 @@
                 <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
                 <input id="sendButton" type="submit" name="submit" class="info__link" value="Send">
               </form> -->
-              <button class="info__link" onclick="closeContact()">Close</button>
+              <!-- <p class="close" onclick="closeContact()">Close</p> -->
             <!-- </header> -->
           </section>  
         </main>
