--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <span class="info__spacer"></span>
           <h3 class="info__greet">Hi,</h3>
           <p class="info__subtext">
-            I'm a third year computer science student at California State University Long Beach. This page contains some of my projects. Click to see more info.
+            I'm a third year computer science student at California State University Long Beach. This page contains some of my projects. Click them see more info.
           </p>
           <p class="info__link" onclick="contact()">Contact Me</p>
           <a href="https://github.com/ryan-w-c" class="info__link" target="_blank">Github</a>
