--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <title>Ryan Cavanagh</title>
+    <link rel="icon" type="image/x-icon" href="img/rc.ico" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150458197-1"></script>
     <script>
