--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <span class="info__spacer"></span>
           <h3 class="info__greet">Hi,</h3>
           <p class="info__subtext">
-            I'm a third year computer science student at California State University Long Beach. This page contains some of my projects. Click them to see more info.
+            I'm a fourth year computer science student at California State University Long Beach. This page contains some of my projects. Click them to see more info.
           </p>
           <div class="info__link start" onkeyup="clicked(event, this)" tabindex="1" onclick="contact()">Contact Me</div>
           <a href="https://github.com/ryan-w-c" tabindex="1" class="info__link start" target="_blank">Github</a>
