update resume css

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       </main> -->
       <main class="home" id="res">
           
-        <embed src="img/RyanCavanaghResume.pdf" width="100%" height="100%">
+        <embed class="res" src="img/RyanCavanaghResume.pdf">
       </main>
     <script type="text/javascript" src="./functions.js"></script>
   </body>
