--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
           <span class="info__spacer"></span>
 
           <h3 class="info__greet">Experience</h3>
+          
+          <p class="job__co">Flexport</p>
+          <p class="job__title">Software Engineer</p>
+          <p class="time__frame">July 2022 - Present</p>
 
           <p class="job__co">American Express</p>
           <p class="job__title">Software Engineer Intern</p>
